--- a/hbd.html
+++ b/hbd.html
@@ -44,7 +44,7 @@ you give to every one who knows you.">
     <meta name="author" content="Vinit Shahdeo">
     <meta name="email" content="vinitshahdeo@gmail.com">
     <meta property="og:type" content="website" /> 
-    <meta property="og:title" content="Happy Birthday Aastha!" />
+    <meta property="og:title" content="Happy Birthday Kavitha!" />
     <meta property="og:description" content="May your birthday bring you as much as you happiness
      you give to every one who knows you" />
     <meta property="og:image" content="https://scontent.cdninstagram.com/t51.2885-19/s320x320/17332840_428978084117611_7673563513641500672_a.jpg" />
@@ -58,7 +58,7 @@ you give to every one who knows you.">
      you give to every one who knows you">
     <meta name="twitter:image" content="https://scontent.cdninstagram.com/t51.2885-19/s320x320/17332840_428978084117611_7673563513641500672_a.jpg">
 
-	<meta itemprop="name" content="Happy Birthday Aastha!">
+	<meta itemprop="name" content="Happy Birthday Kavitha!">
 	<meta itemprop="description" content="May your birthday bring you as much as you happiness
 	you give to every one who knows you">
 	<meta itemprop="image" content="https://scontent.cdninstagram.com/t51.2885-19/s320x320/17332840_428978084117611_7673563513641500672_a.jpg">
@@ -96,6 +96,7 @@ you give to every one who knows you.">
 	<link href="css/style1.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="shortcut icon" href="./cake.png" type="image/png" />
+	<link rel="" href="" type=""/>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/birthday.js"></script>
     <script type="text/javascript" src="js/hbd.js"></script>
